examples/invalid/illegal_request_header_host.reqlang
```%request
GET / HTTP/1.1
host: https://example.com

```
